results/check-dev/summary.log
Type check exit: 2
Lint exit: 0
Build exit: 1

==> Type check

> exam-prepper@0.1.0 typecheck
> tsc --noEmit

src/app/play/page.tsx(311,76): error TS2322: Type '"vaikea"' is not assignable to type 'Difficulty'.

==> Lint

> exam-prepper@0.1.0 lint
> eslint .


==> Build

> exam-prepper@0.1.0 build
> next build

⚠ Warning: Next.js inferred your workspace root, but it may not be correct.
 We detected multiple lockfiles and selected the directory of /Users/mikko.makipaa/package-lock.json as the root directory.
 To silence this warning, set `turbopack.root` in your Next.js config, or consider removing one of the lockfiles if it's not needed.
   See https://nextjs.org/docs/app/api-reference/config/next-config-js/turbopack#root-directory for more information.
 Detected additional lockfiles: 
   * /Users/mikko.makipaa/koekertaaja/package-lock.json

▲ Next.js 16.1.1 (Turbopack)
- Environments: .env.local, .env
- Experiments (use with caution):
  · serverActions

  Creating an optimized production build ...
✓ Compiled successfully in 6.4s
  Running TypeScript ...
Failed to compile.

./src/app/play/page.tsx:311:76
Type error: Type '"vaikea"' is not assignable to type 'Difficulty'.

[0m [90m 309 |[39m               [36mconst[39m availableDifficulties [33m=[39m getAvailableDifficulties(group[33m.[39msets)[33m;[39m
 [90m 310 |[39m               [36mconst[39m groupHasFlashcards [33m=[39m hasFlashcards(group[33m.[39msets)[33m;[39m
[31m[1m>[22m[39m[90m 311 |[39m               [36mconst[39m difficultyOrder[33m:[39m [33mDifficulty[39m[] [33m=[39m [[32m'helppo'[39m[33m,[39m [32m'normaali'[39m[33m,[39m [32m'vaikea'[39m][33m;[39m
 [90m     |[39m                                                                            [31m[1m^[22m[39m
 [90m 312 |[39m               [36mconst[39m reviewCandidates [33m=[39m difficultyOrder
 [90m 313 |[39m                 [33m.[39mmap(difficulty [33m=>[39m group[33m.[39msets[33m.[39mfind(
 [90m 314 |[39m                   [36mset[39m [33m=>[39m [36mset[39m[33m.[39mdifficulty [33m===[39m difficulty [33m&&[39m [36mset[39m[33m.[39mmode [33m===[39m [32m'quiz'[39m[0m
Next.js build worker exited with code: 1 and signal: null
